# Aoc-2024

./: CMakeLists.txt  README.md
src/: main.cpp
src/Solutions/: Day1.h  Day10.h  Day2.h  Day3.h  Day4.h  Day5.h  Day6.h  Day7.h  Day8.h  Day9.h
src/Utils/: Utils.h
